change link to new gallery.html

--- a/frame.html
+++ b/frame.html
@@ -28,7 +28,7 @@
 <br> 	
 <ul id="menu-v">
 	<li></li>
-	<li><a href="gallery/gallery.html" target="content">Gallery</a></li>
+	<li><a href="gallery.html" target="content">Gallery</a></li>
 	<li><a href="links.html" target="content">Links</a></li>
 	<li><a href="contact.html" target="content">Contact</a></li>
 </ul>
