--- a/communicate.html
+++ b/communicate.html
@@ -165,7 +165,7 @@ Once results have been synthesized, it is important to offer targeted communicat
 </ul>
 <a name="gallery"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/gallery_sm.png" align="left"><h2>&nbsp;&nbsp;Gallery</h2>
-Visit our <a href="http://www.23hq.com/msp_concierge"><b>Visualization Gallery</b></a> to explore examples of different design techniques NatCap has used to translate science information into clear and effective visuals.  Many of these visuals have been used to informing the MSP process in places around the world.
+Visit our <a href="gallery.html"><b>Visualization Gallery</b></a> to explore examples of different design techniques NatCap has used to translate science information into clear and effective visuals.  Many of these visuals have been used to informing the MSP process in places around the world.
 <p></p>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/faq_sm.png" align="left"><h2>&nbsp;&nbsp;Frequently Asked Questions (FAQ)</h2>
