--- a/gallery.html
+++ b/gallery.html
@@ -3,9 +3,9 @@
 <head>
     <title></title>
     <meta charset=utf-8>
-    <script type="text/javascript" src="./js/d3.v3.js"></script>
+    <script type="text/javascript" src="js/d3.v3.js"></script>
 
-    <link rel="stylesheet" href="./css/vizgallery.css" type="text/css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/vizgallery.css" type="text/css" media="screen" title="no title" charset="utf-8">
 
     <link href='http://fonts.googleapis.com/css?family=Monda:400,700' rel='stylesheet' type='text/css'>
 
