--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,8 @@
 
 </head>
 <body>
-<div class="info">MSP Gallery <span class="example-count"></span> | <a class="about-link" href="">About</a></div>
+<p></p><br>
+<div class="info">Gallery | <a class="about-link" href="">About</a></div>
 <div class="about-box">
 
     <div class="about-close" style="cursor: pointer;">x</div>
@@ -224,6 +225,5 @@
     });
 
 </script>
-
 </body>
 </html>
